# loomspace-ai

./: .env.example  .gitignore  .graphifyignore  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  INT17_IMPLEMENTATION_SUMMARY.md  MEDIA_HANDLING_DESIGN.md  MEMORY.md  README.md  app.yaml  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  review-backend.yaml  scout-recon.yaml  server.js  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.test-dist/tests/: settings.test.js
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_remove_auth.py  0002_remove_user_model.py
backend/app/: config.py  database.py  main.py  models.py  persistence.py  schemas.py  secret_manager.py  security.py
backend/app/routers/: auth.py  deps.py  profiles.py  proxy.py  workspace.py
backend/scripts/: sync_storage.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
server/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
server/src/: index.ts  profiles.ts  proxy.ts  workspace.ts
server/tests/: chat-thread-discrete-models.test.ts  thread-model-settings.test.ts
src/: App.tsx  AuthGate.tsx  main.tsx  styles-media.css  styles.css
src/lib/: api.ts  frontendPersistenceService.ts  mediaUtils.ts  provider.ts  providerPresentation.ts  sample.ts  settingsSnapshotMapper.ts  store.ts  (+7 more)
tests/: settings.test.ts
(+14 files in other folders)
