[project]
name = "loomspace-backend"
version = "0.1.0"
description = "FastAPI backend for LoomSpace AI with PostgreSQL persistence"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "cryptography>=42",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling>=1.9"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
loomspace-backend = "app.main:app"
